  * Update debian/watch:
    - Use tarballs downloaded from https://www.kernel.org/pub instead of
      generated tarballs from git tags.
    - Check signature of downloaded tarball. Thanks to Osamu Aoki.
  * Use debhelper compat level 11.
  * Update to Standards-Version 4.1.4, no changes needed.
  * Support "nodoc" in DEB_BUILD_PROFILES and DEB_BUILD_OPTIONS.
  * Make build more verbose.

 -- Vagrant Cascadian <vagrant@debian.org>  Mon, 22 Jan 2018 22:32:29 -0800

device-tree-compiler (1.4.5-3) unstable; urgency=medium

  * Add patch from upstream to fix bugs in testsuite for 32-bit
    arm. (Closes: #877797)

 -- Vagrant Cascadian <vagrant@debian.org>  Fri, 06 Oct 2017 11:51:12 -0700

device-tree-compiler (1.4.5-2) unstable; urgency=medium

  * Add patch from upstream to fix building on 32-bit systems.

 -- Vagrant Cascadian <vagrant@debian.org>  Thu, 28 Sep 2017 18:42:05 -0700

device-tree-compiler (1.4.5-1) unstable; urgency=medium

  * New upstream release
    (Closes: #877033)

 -- Héctor Orón Martínez <zumbi@debian.org>  Fri, 29 Sep 2017 00:02:44 +0200

device-tree-compiler (1.4.4-1) unstable; urgency=medium

  * New upstream release:
    - Add DT Overlay support, closes: #863174.
  * Documentation:
    - Only install .pdf of documentation paper, dropping .ps and .dvi
      versions.
    - Add documentation about dts format and dt objects.
  * Add debian/watch file.
  * Switch to source/format: 3.0 (quilt).
  * Switch to dh and debhelper compat level 10.
  * debian/rules:
    - Enabled hardening.
    - Ensure texlive generated documentation does not embed timestamps,
      closes: #876657.
  * debian/control:
    - Set Priority to optional.
    - Set Standards-Version to 4.1.0.
    - Add Vagrant Cascadian to Uploaders.
    - Use https:// URLs for Vcs-*.
  * debian/copyright:
    - Switch to copyright-format 1.0.

 -- Vagrant Cascadian <vagrant@debian.org>  Mon, 25 Sep 2017 09:10:56 -0700

device-tree-compiler (1.4.2-1) unstable; urgency=medium
