@@ -7,8 +7,6 @@ export FORCE_SOURCE_DATE=1
 
 export DEB_BUILD_MAINT_OPTIONS=hardening=+all
 
-export CFLAGS = -Wall -g -fPIC
-
 # python library builds with warnings, temporarily disabled.
 export NO_PYTHON = 1
 
@@ -17,17 +15,17 @@ ifeq ($(origin CC),default)
 export CC = $(DEB_HOST_GNU_TYPE)-gcc
 endif
 
-ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -O0
-else
-	CFLAGS += -O2
-endif
+include /usr/share/dpkg/buildflags.mk
+CFLAGS += -fPIC -Werror -Wall -Wpointer-arith -Wcast-qual	\
+	-Wnested-externs -Wstrict-prototypes -Wmissing-prototypes	\
+	-Wredundant-decls -Wshadow
+CPPFLAGS += -I libfdt -I .
 
 %:
 	dh $@
 
 override_dh_auto_build:
-	dh_auto_build -- V=1
+	dh_auto_build -- V=1 CFLAGS="$(CFLAGS)" CPPFLAGS="$(CPPFLAGS)"
 ifeq (,$(findstring nodoc,$(DEB_BUILD_OPTIONS)))
 	$(MAKE) -C Documentation
 endif
