@@ -10,6 +10,7 @@ device-tree-compiler (1.4.6-1) UNRELEASED; urgency=medium
   * Update to Standards-Version 4.1.4, no changes needed.
   * Support "nodoc" in DEB_BUILD_PROFILES and DEB_BUILD_OPTIONS.
   * Make build more verbose.
+  * Use dpkg buildflags.mk, passing CFLAGS and CPPFLAGS to build.
 
  -- Vagrant Cascadian <vagrant@debian.org>  Mon, 22 Jan 2018 22:32:29 -0800
 
